--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -25,7 +25,7 @@
           </li>
           <li class="menu-item menu-item-has-children">
             <%= link_to doctors_path, class: "js-toggle-sub-menu" do %>
-              | Doctors
+              Doctors
               <i class="fas fa-chevron-down"></i>
             <% end %>
             <ul class="sub-menu js-sub-menu">
@@ -45,7 +45,7 @@
           </li>
           <li class="menu-item">
             <%= link_to root_path, class: "js-toggle-sub-menu" do %>
-              | News
+              News
               <i class="fas fa-chevron-down"></i>
             <% end %>
             <ul class="sub-menu js-sub-menu">
