--- a/app/views/doctors/new.html.erb
+++ b/app/views/doctors/new.html.erb
@@ -1,22 +1,7 @@
-<% render "layouts/header" %>
+<%- paths = [doctors_path, "/new"] %>
 
-<div class="breadcrumb">
-  <div class="container">
-    <nav aria-label="breadcrumb">
-      <ol class="breadcrumb mb-0">
-        <li class="breadcrumb-item">
-          <%= link_to "Home", root_path %>
-        </li>
-        <li class="breadcrumb-item" aria-current="page">
-          <%= link_to "Doctors", doctors_path %>
-        </li>
-        <li class="breadcrumb-item active" aria-current="page">
-          <%= link_to params[:action], new_doctor_path %>
-        </li>
-      </ol>
-    </nav>
-  </div>
-</div>
+<%= render "layouts/header" %>
+<%= render "layouts/breadcrumb", paths: paths %>
 
 <div class="container register">
   <h3 class="register-heading">
