--- a/app/views/layouts/_breadcrumb.html.erb
+++ b/app/views/layouts/_breadcrumb.html.erb
@@ -1,13 +1,16 @@
 <div class="breadcrumb-nav">
-  <div class="container">
+    <div class="container">
     <nav>
       <ul class="breadcrumb mb-0">
         <li class="breadcrumb-item">
           <%= link_to "Home", root_path %>
         </li>
-        <li class="breadcrumb-item">
-          <%= link_to params[:controller], path %>
-        </li>
+        <% paths.each do |path| %>
+          <%- path = path.gsub("/", "") %>
+          <li class="breadcrumb-item" aria-current="page">
+            <%= link_to path.capitalize, path.downcase %>
+          </li>
+        <% end %>
       </ul>
     </nav>
   </div>
