--- a/app/views/doctors/_form.html.erb
+++ b/app/views/doctors/_form.html.erb
@@ -11,61 +11,48 @@
 
   <!-- RIGHT INPUTS -->
   <div class="col-md-6">
-    <div class="form-group">
-      <%= 
-        f.text_field :firstname, 
-        class: "form-control",
-        placeholder: "First Name" 
-      %>
-      <%= 
-        f.text_field :lastname, 
-        class: "form-control",
-        placeholder: "Last Name" 
-      %>
-      <%= 
-        f.text_field :age, 
-        class: "form-control",
-        placeholder: "Age (Optional)" 
-      %>
+    <div class="mb-3">
+      <%= f.text_field :firstname, class: "form-control", placeholder: "First Name" %>
     </div>
-    <div class="form-group">
-      <label class="radio inline">
-        <%= f.radio_button :gender, "male" %>
-        <span>Male</span>
-      </label>
-      <label class="radio inline">
-        <%= f.radio_button :gender, "female" %>
-        <span>Female</span>
-      </label>
+    <div class="mb-3">
+      <%= f.text_field :lastname, class: "form-control", placeholder: "Last Name" %>
+    </div>
+    <div class="mb-3">
+      <%= f.text_field :age, class: "form-control", placeholder: "Age (Optional)" %>
+    </div>
+    <div class="form-check form-check-inline">
+      <%= f.radio_button :gender, "male", class: "form-check-input" %>
+      <%= f.label "Male", class: "form-check-label" %>
+    </div>
+    <div class="form-check form-check-inline">
+      <%= f.radio_button :gender, "female", class: "form-check-input" %>
+      <%= f.label "Female", class: "form-check-label" %>
     </div>
   </div>
 
   <!-- LEFT INPUTS -->
   <div class="col-md-6">
-    <%= f.text_field :phone_no,
-        placeholder: "Phone no (Optional)",
-        class: "form-control",
-        minlength: "11", maxlength: "11"
-    %>
-    <%= f.text_field :email,
-        placeholder: "Email (Optional)",
-        class: "form-control"
-    %>
-    <%= f.text_field :license_no,
-        placeholder: "License No",
-        class: "form-control"
-    %>
+    <div class="mb-3">
+      <%= f.text_field :phone_no,
+          placeholder: "Phone no (Optional)",
+          class: "form-control",
+          minlength: "11", maxlength: "11"
+      %>
+    </div>
+    <div class="mb-3">
+      <%= f.text_field :email, placeholder: "Email (Optional)", class: "form-control" %>
+    </div>
+    <div class="mb-3">
+      <%= f.text_field :license_no, placeholder: "License No", class: "form-control" %>
+    </div>
     <!-- Specializations -->
-    <div class="form-group">
+    <div class="mb-3">
       <%= f.collection_select :specialization_id,
           specializations, :id, :name,
           { prompt: "Select Specialization" },
           { class: "form-control" }
       %>
     </div>
-
-    <div class="form-group">
-      <%= f.submit value: button_label, class: "btn-register" %>
-    </div>
+    <%= f.submit value: button_label, class: "btn btn-primary" %>
   </div>
 <% end %>
