--- a/app/views/specializations/index.html.erb
+++ b/app/views/specializations/index.html.erb
@@ -4,5 +4,5 @@
 <%= render "layouts/breadcrumb", paths: paths %>
 <%= render "layouts/searchbar", paths: paths, placeholder: "Search" %>
 
-<h3 class="text-center mt-5">Specializations</h3>
+<h3 class="text-center mt-4">Medical Specializations</h3>
 <%= render "specializations" %>
