--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -15,7 +15,6 @@
  */
 
 @import url("https://fonts.googleapis.com/css2?family=Poppins;wght@300;400;500;600;700&display=swap")
-@import "bootstrap"
 @import "variables"
 
 body
@@ -58,7 +57,7 @@ h1, h2, h3, h4, h5, h6
 
 .box
   padding: 30px
-  background: $white
+  background: white
   border-radius: 5px
   box-shadow: $shadow
 
@@ -72,20 +71,19 @@ h1, h2, h3, h4, h5, h6
     color: black
 
 .btn-theme
+  color: white
+  border: none
+  outline: none
   font-size: 16px
-  background: none
   font-weight: 500
   padding: 8px 20px
+  background: $main_color
   transition: all 0.3s ease
   text-transform: capitalize
-  outline: 2px solid $main_color
 
   &:hover 
-    color: white
-    outline: none
-    background: $main_color
-  &:focus
-    box-shadow: 0 0 8px $main_color
+    color: $main_color
+    outline: 2px solid $main_color
 
 .hero-section
   padding: 80px 0
