--- a/app/views/medicines/_form.html.erb
+++ b/app/views/medicines/_form.html.erb
@@ -10,12 +10,15 @@
       </ul>
     </div>
   <% end %>
-  <div class="form-group">
+  <div class="mb-3">
     <%= f.text_field :name, class: "form-control", placeholder: "Name" %>
+  </div>
+  <div class="mb-3">
     <%= f.text_field :description, class: "form-control", placeholder: "Description" %>
+  </div>
+  <div class="mb-3">
     <%= f.text_field :price, class: "form-control", placeholder: "Price" %>
   </div>
-  <div class="form-group">
-    <%= f.submit value: button_label, class: "button-register" %>
-  </div>
+  <hr>
+  <%= f.submit value: button_label, class: "btn btn-primary" %>
 <% end %>
