--- a/app/views/prescriptions/index.html.erb
+++ b/app/views/prescriptions/index.html.erb
@@ -1,5 +1,11 @@
 <%- paths = [doctor_prescriptions_path] %>
 
 <%= render "layouts/header" %>
-<%= render "layouts/breadcrumb" paths: paths %>
+<%= render "layouts/breadcrumb", paths: paths %>
 <%= render "layouts/searchbar", paths: paths, placeholder: "Search Prescriptions" %>
+
+<h1>
+  <%= @doctor.fullname %>'s prescriptions
+</h1>
+
+<%= render "prescriptions" %>
