--- a/app/views/doctors/index.html.erb
+++ b/app/views/doctors/index.html.erb
@@ -4,6 +4,24 @@
 <%= render "layouts/breadcrumb", paths: paths %>
 <%= render "layouts/searchbar", paths: paths, placeholder: "Find Doctor" %>
 
-<ul class="doctor-list">
-  <%= render "doctors" %>
-</ul>
+<h3 class="title text-center mt-4 mb-4">
+  Doctor List
+</h3>
+<div class="box">
+  <table class="table">
+    <thead>
+      <tr>
+        <th scope="col">#</th>
+        <th scope="col">Fullname</th>
+        <th scope="col">Age</th>
+        <th scope="col">Phone No.</th>
+        <th scope="col">Email</th>
+        <th scope="col">License No.</th>
+        <th scope="col">Specialization</th>
+      </tr>
+    </thead>
+    <tbody>
+      <%= render "doctors" %>
+    </tbody>
+  </table>
+</div>
