--- a/app/views/medicines/index.html.erb
+++ b/app/views/medicines/index.html.erb
@@ -2,24 +2,10 @@
 <%= render "layouts/header" %>
 <%= render "layouts/breadcrumb", paths: paths %>
 <%= render "layouts/searchbar", paths: paths, placeholder: "Search medicine" %>
+<%= render "new_modal" %>
 
-<%= render "medicines" %>
-
-<!-- Button Trigger Modal -->
 <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
   New Medicine
 </button>
 
-<div class="modal fade" id="exampleModal" tabindex="-1">
-  <div class="modal-dialog modal-dialog-centered">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title">Register New Medicine</h5>
-        <button class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-      </div>
-      <div class="modal-body">
-        <%= render "form", button_label: "Register" %>
-      </div>
-    </div>
-  </div>
-</div>
+<%= render "medicines" %>
